@@ -116,7 +116,7 @@ public class WebTest {
 
         try {
 
-        URL url = new URL("http://" + host  + ":" + port + uri);
+        URL url = URI.create("http://" + host  + ":" + port + uri).toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
