@@ -66,7 +66,7 @@ public class WebTest {
 
     public void doTest(String uri) throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port + uri);
+        URL url = URI.create("http://" + host  + ":" + port + uri).toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
